[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://objects/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/paragraph_bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/paragraph.tres" type="DynamicFont" id=4]

[node name="PauseScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = 1.52588e-05
margin_right = 320.0
margin_bottom = 1.52588e-05
rect_min_size = Vector2( 640, 0 )
color = Color( 0.34902, 0.337255, 0.321569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar_Fill" type="ColorRect" parent="Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = -1.0
rect_min_size = Vector2( 640, 0 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_LevelInfo1" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -360.0
margin_right = -324.0
margin_bottom = -344.0
rect_min_size = Vector2( 316, 16 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.517647, 0.494118, 0.529412, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Season X, Episode Y"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_LevelInfo2" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 324.0
margin_top = -360.0
margin_right = 4.0
margin_bottom = -344.0
rect_min_size = Vector2( 320, 16 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.517647, 0.494118, 0.529412, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Level Title"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Paused" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -212.0
margin_right = 24.0
margin_bottom = -198.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 24, 7 )
custom_fonts/font = ExtResource( 3 )
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Quip" type="Label" parent="."]
margin_top = 182.0
margin_right = 640.0
margin_bottom = 198.0
rect_min_size = Vector2( 640, 16 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.517647, 0.494118, 0.529412, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "I think we should take a break."
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 200.0
margin_right = 64.0
margin_bottom = 236.0

[node name="Tween" type="Tween" parent="."]
[connection signal="back_from_root" from="Menu" to="." method="_on_Menu_back_from_root"]
[connection signal="button_pressed" from="Menu" to="." method="_on_Menu_button_pressed"]
